fixed build error: #toList only avail jdk16+
Signed-off-by: Andre Dietisheim <adietish@redhat.com>